--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "@prisma/client": "5.12.1",
+    "dotenv": "^16.4.5",
+    "iconoir": "^7.6.0",
+    "json-bigint": "^1.0.0",
+    "monaco-editor": "^0.47.0",
+    "next": "14.1.4",
+    "quill": "2.0.0-rc.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "postcss": "^8.4.38",
+    "prisma": "^5.12.1",
+    "tailwindcss": "^3.4.3"
   }
 }
